force-app/main/default/objects/Opporunity_Script_Junction__c/Opporunity_Script_Junction__c.object-meta.xml
<CustomObject>
    <label>Opporunity Script Junction</label>
    <nameField>
        <label>Opporunity Script Junction Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Opporunity Script Junctions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>