force-app/main/default/objects/Opporunity_Script_Junction__c/fields/Date_Won__c.field-meta.xml
<CustomField>
    <fullName>Date_Won__c</fullName>
    <description>Timestamp for when the opportunity was won.</description>
    <label>Date Won</label>
    <type>Date</type>
</CustomField>