force-app/main/default/objects/Opporunity_Script_Junction__c/fields/Opporunity_Stage__c.field-meta.xml
<CustomField>
    <fullName>Opporunity_Stage__c</fullName>
    <description>Captures the stage of the opportunity when this record was created.</description>
    <label>Opporunity Stage</label>
    <length>32</length>
    <required>true</required>
    <type>Text</type>
</CustomField>