force-app/main/default/objects/Opporunity_Script_Junction__c/fields/Opporunity_Won__c.field-meta.xml
<CustomField>
    <fullName>Opporunity_Won__c</fullName>
    <formula>Opportunity__r.IsWon</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opporunity Won</label>
    <type>Checkbox</type>
</CustomField>