force-app/main/default/objects/Opporunity_Script_Junction__c/fields/Related_User__c.field-meta.xml
<CustomField>
    <fullName>Related_User__c</fullName>
    <formula>Sales_Rep_Script__r.scriptUser__r.LastName+
IF(ISBLANK(Sales_Rep_Script__r.scriptUser__r.FirstName),
  &quot;&quot;,
  &quot;, &quot;+Sales_Rep_Script__r.scriptUser__r.FirstName
)</formula>
    <label>Related User</label>
    <type>Text</type>
</CustomField>