force-app/main/default/objects/Opporunity_Script_Junction__c/fields/Related_User_Id__c.field-meta.xml
<CustomField>
    <fullName>Related_User_Id__c</fullName>
    <formula>Sales_Rep_Script__r.scriptUser__c</formula>
    <label>Related User Id</label>
    <type>Text</type>
</CustomField>