force-app/main/default/objects/Opporunity_Script_Junction__c/fields/Sales_Rep_Script__c.field-meta.xml
<CustomField>
    <fullName>Sales_Rep_Script__c</fullName>
    <label>Sales Rep Script</label>
    <referenceTo>Sales_Rep_Script__c</referenceTo>
    <relationshipLabel>Opporunity Script Junctions S</relationshipLabel>
    <relationshipName>Opporunity_Script_Junctions</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>